yacc/bin/dxf2.output
Nonterminals useless in grammar

   HEADER
   $@1
   HEADER_VARS
   $@2
   CLASSES
   $@3
   CLASS_ENTRIES
   $@4
   TABLES
   $@5
   $@6
   TABLE_ENTRY1
   $@7
   TABLE_ENTRIES
   TABLE_ENTRY_DATA
   $@8
   $@9
   TABLE_ENTRY_DATA1
   ENTITIES
   $@14


Terminals unused in grammar

   HEADER_START
   HEADER_VAR
   EOL
   VAR_NAME
   VALUE
   GROUP_CODE
   TABLE_END
   TABLE_CMN_GROUP
   TABLE_START
   TABLE_ENTRY
   CLASS_ENTRY
   CLASS_START
   error2
   APPID_ENTRY
   BLOCK_RECORD_ENTRY
   DIMSTYLE_ENTRY
   LAYER_ENTRY
   LTYPE_ENTRY
   STYLE_ENTRY
   UCS_ENTRY
   VIEW_ENTRY
   VPORT_ENTRY
   ENTITY_START
   LINE_GROUP_CODE


Rules useless in grammar

   31 $@1: /* empty */

   32 HEADER: HEADER_START $@1 HEADER_VARS SECTION_END

   33 HEADER_VARS: /* empty */

   34 $@2: /* empty */

   35 HEADER_VARS: HEADER_VAR $@2 HEADER_VARS

   36 $@3: /* empty */

   37 CLASSES: CLASS_START $@3 CLASS_ENTRIES SECTION_END

   38 CLASS_ENTRIES: /* empty */

   39 $@4: /* empty */

   40 CLASS_ENTRIES: CLASS_ENTRY $@4 CLASS_ENTRIES

   41 $@5: /* empty */

   42 $@6: /* empty */

   43 TABLES: TABLE_START $@5 TABLE_ENTRIES SECTION_END $@6

   44 $@7: /* empty */

   45 TABLE_ENTRY1: TABLE_ENTRY $@7 TABLE_ENTRY_DATA TABLE_END

   46 TABLE_ENTRIES: TABLE_ENTRY1
   47              | TABLE_ENTRIES TABLE_ENTRY1

   48 TABLE_ENTRY_DATA: /* empty */

   49 $@8: /* empty */

   50 TABLE_ENTRY_DATA: TABLE_CMN_GROUP $@8 TABLE_ENTRY_DATA1

   51 $@9: /* empty */

   52 TABLE_ENTRY_DATA: TABLE_ENTRY_DATA TABLE_CMN_GROUP $@9 TABLE_ENTRY_DATA1

   53 TABLE_ENTRY_DATA1: APPID_ENTRY
   54                  | BLOCK_RECORD_ENTRY
   55                  | DIMSTYLE_ENTRY
   56                  | LAYER_ENTRY
   57                  | LTYPE_ENTRY
   58                  | STYLE_ENTRY
   59                  | UCS_ENTRY
   60                  | VIEW_ENTRY
   61                  | VPORT_ENTRY

   62 $@14: /* empty */

   63 ENTITIES: ENTITY_START $@14 ENTITY_ENTRIES SECTION_END


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input BLOCKS

    3 $@10: /* empty */

    4 BLOCKS: BLOCK_START $@10 BLOCK_ENTRIES SECTION_END

    5 BLOCK_ENTRIES: BLOCK_ENTRY1
    6              | BLOCK_ENTRIES BLOCK_ENTRY1

    7 $@11: /* empty */

    8 BLOCK_ENTRY1: BLOCK_ENTRY $@11 BLOCKEND_ENTRY

    9 $@12: /* empty */

   10 BLOCK_ENTRY1: BLOCK_ENTRY $@12 ENTITY_ENTRIES BLOCKEND_ENTRY

   11 ENTITY_ENTRIES: ENTITY_ENTRY1
   12               | ENTITY_ENTRIES ENTITY_ENTRY1

   13 $@13: /* empty */

   14 ENTITY_ENTRY1: ENTITY_CMN_GROUP $@13 ENTITY_ENTRY_DATA1

   15 DIMENSION: DIMENSION_ENTRY ALDIMENSION_ENTRY
   16          | DIMENSION_ENTRY LRDIMENSION_ENTRY
   17          | DIMENSION_ENTRY RDIMENSION_ENTRY
   18          | DIMENSION_ENTRY ANDIMENSION_ENTRY
   19          | DIMENSION_ENTRY ODIMENSION_ENTRY

   20 ENTITY_ENTRY_DATA1: /* empty */
   21                   | ARC_ENTRY
   22                   | CIRCLE_ENTRY
   23                   | LINE_ENTRY
   24                   | LWPOLYLINE_ENTRY
   25                   | SPLINE_ENTRY
   26                   | VIEWPORT_ENTRY
   27                   | MTEXT_ENTRY
   28                   | TEXT_ENTRY
   29                   | INSERT_ENTRY
   30                   | DIMENSION


Terminals, with rules where they appear

$end (0) 0
error (256)
HEADER_START (258)
HEADER_VAR (259)
SECTION_END (260) 4
EOL (261)
VAR_NAME (262)
VALUE (263)
GROUP_CODE (264)
TABLE_END (265)
TABLE_CMN_GROUP (266)
TABLE_START (267)
TABLE_ENTRY (268)
CLASS_ENTRY (269)
CLASS_START (270)
error2 (271)
BLOCK_START (272) 4
BLOCK_ENTRY (273) 8 10
BLOCKEND_ENTRY (274) 8 10
APPID_ENTRY (275)
BLOCK_RECORD_ENTRY (276)
DIMSTYLE_ENTRY (277)
LAYER_ENTRY (278)
LTYPE_ENTRY (279)
STYLE_ENTRY (280)
UCS_ENTRY (281)
VIEW_ENTRY (282)
VPORT_ENTRY (283)
ENTITY_CMN_GROUP (284) 14
ENTITY_START (285)
LINE_GROUP_CODE (286)
DIMENSION_ENTRY (287) 15 16 17 18 19
ALDIMENSION_ENTRY (288) 15
LRDIMENSION_ENTRY (289) 16
RDIMENSION_ENTRY (290) 17
ANDIMENSION_ENTRY (291) 18
ODIMENSION_ENTRY (292) 19
ARC_ENTRY (293) 21
CIRCLE_ENTRY (294) 22
LINE_ENTRY (295) 23
SPLINE_ENTRY (296) 25
TEXT_ENTRY (297) 28
MTEXT_ENTRY (298) 27
VIEWPORT_ENTRY (299) 26
LWPOLYLINE_ENTRY (300) 24
INSERT_ENTRY (301) 29


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
input (48)
    on left: 1 2, on right: 0 2
BLOCKS (49)
    on left: 4, on right: 2
$@10 (50)
    on left: 3, on right: 4
BLOCK_ENTRIES (51)
    on left: 5 6, on right: 4 6
BLOCK_ENTRY1 (52)
    on left: 8 10, on right: 5 6
$@11 (53)
    on left: 7, on right: 8
$@12 (54)
    on left: 9, on right: 10
ENTITY_ENTRIES (55)
    on left: 11 12, on right: 10 12
ENTITY_ENTRY1 (56)
    on left: 14, on right: 11 12
$@13 (57)
    on left: 13, on right: 14
DIMENSION (58)
    on left: 15 16 17 18 19, on right: 30
ENTITY_ENTRY_DATA1 (59)
    on left: 20 21 22 23 24 25 26 27 28 29 30, on right: 14


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . BLOCKS

    $end         shift, and go to state 2
    BLOCK_START  shift, and go to state 3

    BLOCKS  go to state 4


state 2

    0 $accept: input $end .

    $default  accept


state 3

    4 BLOCKS: BLOCK_START . $@10 BLOCK_ENTRIES SECTION_END

    $default  reduce using rule 3 ($@10)

    $@10  go to state 5


state 4

    2 input: input BLOCKS .

    $default  reduce using rule 2 (input)


state 5

    4 BLOCKS: BLOCK_START $@10 . BLOCK_ENTRIES SECTION_END

    BLOCK_ENTRY  shift, and go to state 6

    BLOCK_ENTRIES  go to state 7
    BLOCK_ENTRY1   go to state 8


state 6

    8 BLOCK_ENTRY1: BLOCK_ENTRY . $@11 BLOCKEND_ENTRY
   10             | BLOCK_ENTRY . $@12 ENTITY_ENTRIES BLOCKEND_ENTRY

    ENTITY_CMN_GROUP  reduce using rule 9 ($@12)
    $default          reduce using rule 7 ($@11)

    $@11  go to state 9
    $@12  go to state 10


state 7

    4 BLOCKS: BLOCK_START $@10 BLOCK_ENTRIES . SECTION_END
    6 BLOCK_ENTRIES: BLOCK_ENTRIES . BLOCK_ENTRY1

    SECTION_END  shift, and go to state 11
    BLOCK_ENTRY  shift, and go to state 6

    BLOCK_ENTRY1  go to state 12


state 8

    5 BLOCK_ENTRIES: BLOCK_ENTRY1 .

    $default  reduce using rule 5 (BLOCK_ENTRIES)


state 9

    8 BLOCK_ENTRY1: BLOCK_ENTRY $@11 . BLOCKEND_ENTRY

    BLOCKEND_ENTRY  shift, and go to state 13


state 10

   10 BLOCK_ENTRY1: BLOCK_ENTRY $@12 . ENTITY_ENTRIES BLOCKEND_ENTRY

    ENTITY_CMN_GROUP  shift, and go to state 14

    ENTITY_ENTRIES  go to state 15
    ENTITY_ENTRY1   go to state 16


state 11

    4 BLOCKS: BLOCK_START $@10 BLOCK_ENTRIES SECTION_END .

    $default  reduce using rule 4 (BLOCKS)


state 12

    6 BLOCK_ENTRIES: BLOCK_ENTRIES BLOCK_ENTRY1 .

    $default  reduce using rule 6 (BLOCK_ENTRIES)


state 13

    8 BLOCK_ENTRY1: BLOCK_ENTRY $@11 BLOCKEND_ENTRY .

    $default  reduce using rule 8 (BLOCK_ENTRY1)


state 14

   14 ENTITY_ENTRY1: ENTITY_CMN_GROUP . $@13 ENTITY_ENTRY_DATA1

    $default  reduce using rule 13 ($@13)

    $@13  go to state 17


state 15

   10 BLOCK_ENTRY1: BLOCK_ENTRY $@12 ENTITY_ENTRIES . BLOCKEND_ENTRY
   12 ENTITY_ENTRIES: ENTITY_ENTRIES . ENTITY_ENTRY1

    BLOCKEND_ENTRY    shift, and go to state 18
    ENTITY_CMN_GROUP  shift, and go to state 14

    ENTITY_ENTRY1  go to state 19


state 16

   11 ENTITY_ENTRIES: ENTITY_ENTRY1 .

    $default  reduce using rule 11 (ENTITY_ENTRIES)


state 17

   14 ENTITY_ENTRY1: ENTITY_CMN_GROUP $@13 . ENTITY_ENTRY_DATA1

    DIMENSION_ENTRY   shift, and go to state 20
    ARC_ENTRY         shift, and go to state 21
    CIRCLE_ENTRY      shift, and go to state 22
    LINE_ENTRY        shift, and go to state 23
    SPLINE_ENTRY      shift, and go to state 24
    TEXT_ENTRY        shift, and go to state 25
    MTEXT_ENTRY       shift, and go to state 26
    VIEWPORT_ENTRY    shift, and go to state 27
    LWPOLYLINE_ENTRY  shift, and go to state 28
    INSERT_ENTRY      shift, and go to state 29

    $default  reduce using rule 20 (ENTITY_ENTRY_DATA1)

    DIMENSION           go to state 30
    ENTITY_ENTRY_DATA1  go to state 31


state 18

   10 BLOCK_ENTRY1: BLOCK_ENTRY $@12 ENTITY_ENTRIES BLOCKEND_ENTRY .

    $default  reduce using rule 10 (BLOCK_ENTRY1)


state 19

   12 ENTITY_ENTRIES: ENTITY_ENTRIES ENTITY_ENTRY1 .

    $default  reduce using rule 12 (ENTITY_ENTRIES)


state 20

   15 DIMENSION: DIMENSION_ENTRY . ALDIMENSION_ENTRY
   16          | DIMENSION_ENTRY . LRDIMENSION_ENTRY
   17          | DIMENSION_ENTRY . RDIMENSION_ENTRY
   18          | DIMENSION_ENTRY . ANDIMENSION_ENTRY
   19          | DIMENSION_ENTRY . ODIMENSION_ENTRY

    ALDIMENSION_ENTRY  shift, and go to state 32
    LRDIMENSION_ENTRY  shift, and go to state 33
    RDIMENSION_ENTRY   shift, and go to state 34
    ANDIMENSION_ENTRY  shift, and go to state 35
    ODIMENSION_ENTRY   shift, and go to state 36


state 21

   21 ENTITY_ENTRY_DATA1: ARC_ENTRY .

    $default  reduce using rule 21 (ENTITY_ENTRY_DATA1)


state 22

   22 ENTITY_ENTRY_DATA1: CIRCLE_ENTRY .

    $default  reduce using rule 22 (ENTITY_ENTRY_DATA1)


state 23

   23 ENTITY_ENTRY_DATA1: LINE_ENTRY .

    $default  reduce using rule 23 (ENTITY_ENTRY_DATA1)


state 24

   25 ENTITY_ENTRY_DATA1: SPLINE_ENTRY .

    $default  reduce using rule 25 (ENTITY_ENTRY_DATA1)


state 25

   28 ENTITY_ENTRY_DATA1: TEXT_ENTRY .

    $default  reduce using rule 28 (ENTITY_ENTRY_DATA1)


state 26

   27 ENTITY_ENTRY_DATA1: MTEXT_ENTRY .

    $default  reduce using rule 27 (ENTITY_ENTRY_DATA1)


state 27

   26 ENTITY_ENTRY_DATA1: VIEWPORT_ENTRY .

    $default  reduce using rule 26 (ENTITY_ENTRY_DATA1)


state 28

   24 ENTITY_ENTRY_DATA1: LWPOLYLINE_ENTRY .

    $default  reduce using rule 24 (ENTITY_ENTRY_DATA1)


state 29

   29 ENTITY_ENTRY_DATA1: INSERT_ENTRY .

    $default  reduce using rule 29 (ENTITY_ENTRY_DATA1)


state 30

   30 ENTITY_ENTRY_DATA1: DIMENSION .

    $default  reduce using rule 30 (ENTITY_ENTRY_DATA1)


state 31

   14 ENTITY_ENTRY1: ENTITY_CMN_GROUP $@13 ENTITY_ENTRY_DATA1 .

    $default  reduce using rule 14 (ENTITY_ENTRY1)


state 32

   15 DIMENSION: DIMENSION_ENTRY ALDIMENSION_ENTRY .

    $default  reduce using rule 15 (DIMENSION)


state 33

   16 DIMENSION: DIMENSION_ENTRY LRDIMENSION_ENTRY .

    $default  reduce using rule 16 (DIMENSION)


state 34

   17 DIMENSION: DIMENSION_ENTRY RDIMENSION_ENTRY .

    $default  reduce using rule 17 (DIMENSION)


state 35

   18 DIMENSION: DIMENSION_ENTRY ANDIMENSION_ENTRY .

    $default  reduce using rule 18 (DIMENSION)


state 36

   19 DIMENSION: DIMENSION_ENTRY ODIMENSION_ENTRY .

    $default  reduce using rule 19 (DIMENSION)
